<resources>
    <string name="app_name">List and Detail</string>
    <string name="repository_name">repository-name</string>
    <string name="my_name" translatable="false">Martina Kopecká</string>
    <string name="commit_message">Added new super long commit message to test commit message displaying. \n\nHope it works! </string>
    <string name="repository_date">2016-09-02T20:55:15Z</string>
    <string name="base_fragment">Base Fragment</string>
    <string name="branches">Branches</string>
    <string name="commits">Commits</string>
    <string name="application_details">Application author</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="my_mail" translatable="false">xykopecka@gmail.com</string>
    <string name="my_github" translatable="false">https://github.com/kopemar</string>
    <string name="about">About</string>
    <string name="repositories">Repositories</string>
    <string name="no_connection">No Connection</string>
    <string name="http_exception">HttpException</string>
    <string name="github">GitHub</string>
    <string name="email">Email</string>
    <string name="mailto">mailto</string>
</resources>
