<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/vAboutTextView"
        style="@style/Layout.Wrapped.H1"
        android:layout_margin="@dimen/_24dp"
        android:text="@string/application_details"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/vLine"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1dp"
        android:layout_marginTop="@dimen/_24dp"
        android:background="@color/black_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vAboutTextView" />

    <ImageView
        android:id="@+id/vProfileIcon"
        style="@style/Layout.Wrapped"
        android:layout_marginStart="@dimen/_24dp"
        android:layout_marginTop="@dimen/_24dp"
        android:layout_marginBottom="@dimen/_16dp"
        android:contentDescription="@string/profile_photo"
        android:src="@drawable/ic_person"
        app:layout_constraintEnd_toStartOf="@id/vAboutName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vLine" />

    <TextView
        android:id="@+id/vAboutName"
        style="@style/Layout.Wrapped.H1.Thick"
        android:layout_marginStart="@dimen/_8dp"
        android:text="@string/my_name"
        app:layout_constraintBottom_toBottomOf="@id/vProfileIcon"
        app:layout_constraintStart_toEndOf="@id/vProfileIcon"
        app:layout_constraintTop_toTopOf="@id/vProfileIcon" />

    <ImageView
        android:id="@+id/vMailIcon"
        style="@style/Layout.Wrapped"
        android:layout_marginStart="@dimen/_24dp"
        android:layout_marginTop="@dimen/_16dp"
        android:layout_marginBottom="@dimen/_16dp"
        android:contentDescription="@string/profile_photo"
        android:src="@drawable/ic_email"
        app:layout_constraintEnd_toStartOf="@id/vAboutMail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vProfileIcon" />

    <TextView
        android:id="@+id/vAboutMail"
        style="@style/Layout.Wrapped"
        android:layout_marginStart="@dimen/_8dp"
        android:text="@string/my_mail"
        app:layout_constraintBottom_toBottomOf="@id/vMailIcon"
        app:layout_constraintStart_toEndOf="@id/vMailIcon"
        app:layout_constraintTop_toTopOf="@id/vMailIcon" />

    <Button
        android:id="@+id/vGithubButton"
        style="@style/Layout.Wrapped"
        android:layout_margin="@dimen/_24dp"
        android:text="@string/github"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/vEmailButton"
        app:layout_constraintTop_toBottomOf="@id/vAboutMail" />

    <Button
        android:id="@+id/vEmailButton"
        style="@style/Layout.Wrapped"
        android:layout_margin="@dimen/_24dp"
        android:text="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/vGithubButton"
        app:layout_constraintTop_toBottomOf="@id/vAboutMail" />

</androidx.constraintlayout.widget.ConstraintLayout>
